--- a/README
+++ b/README
@@ -28,7 +28,11 @@ http://russellmath.org
 
 Installation/Building
 =====================
-For installation/building instructions read INSTALL.
+To build russell environment the bjam builder is required.
+The default compiler is g++ from gcc
+Run:
+    1) to build optimized version:  bjam release -j 4 toolset=gcc
+    2) to build the debug version:  bjam debug -j 4 toolset=gcc
 
 System requirements
 ===================
