--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Developer:
 -----------------
-Dmitri Yurievuch Vlasov - all work under mdl and del.
+Dmitri Yurievuch Vlasov - all work under Russell implementation.
